# qt-build-win64

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_ENG.md  buildQtAndCreateSampleProject.bat  cmakeBuild.bat  main.cpp
